fix(complex-page): height issue on too much data

--- a/frontend/css/complex.css
+++ b/frontend/css/complex.css
@@ -1,7 +1,6 @@
 .data-container {
     display: flex;
     flex-wrap: wrap;
-    height: 700px;
 }
 .data-container > * {
     width: 50%;
@@ -9,6 +8,7 @@
 }
 .data-container .column-left {
     min-width: 300px;
+    max-height: 700px;
 }
 
 .data-container .column-right .column-right {
